# PythonProjects

./: .gitignore  pyproject.toml
Lab001/: histogram1.py  histogram2.py
Lab001/books/: heart_of_the_darkness.txt  jadro_ciemnosci.txt  romeo_i_julia.txt
Lab002/: ising.py  magn1.txt  main.py
Lab003/: decorator.py
Lab004/: jit_ising.py  main.py
Lab005/: reLoad.json  scraping.py
Lab006/: scraping_v2.py
Lab008/: sir.ipynb  sympy.ipynb
Lab009/: sir_v2.py
